src/test/ui/rfc-2091-track-caller/error-odd-syntax.stderr
error: malformed `track_caller` attribute input
  --> $DIR/error-odd-syntax.rs:3:1
   |
LL | #[track_caller(1)]
   | ^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[track_caller]`

warning: the feature `track_caller` is incomplete and may cause the compiler to crash
  --> $DIR/error-odd-syntax.rs:1:12
   |
LL | #![feature(track_caller)]
   |            ^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to previous error

